<resources>
    <string name="app_name">Tic Tac Toe</string>
    <string name="starlogo">StarLogo</string>
    <string name="x_and_o_logo">X and O Logo</string>
    <string name="tic_tac_toe">tic tac toe</string>
    <string name="one_player_button">one player button</string>
    <string name="options_button">options_button</string>
    <string name="two_player_button">two_player_button</string>
    <string name="exit_button">exit_button</string>
    <string name="one_player">One Player</string>
    <string name="two_player">Two Player</string>
    <string name="options">Options</string>
    <string name="exit">Exit</string>
    <string name="tic_tac_toe_header">TIC TAC TOE</string>
    <string name="x_1">X</string>
    <string name="o_1">O</string>
    <string name="xo">XO</string>
    <string name="edit_name_text_field">edit_name_text_field</string>
    <string name="first_move">First Move</string>
    <string name="select_piece">Select Piece</string>
    <string name="two_players">Two Players</string>
    <string name="enter_your_name_here_2">Enter Your Name Here</string>
    <string name="play">PLAY</string>
    <string name="x">X</string>
    <string name="play_1">PLAY</string>
    <string name="o">O</string>
    <string name="board_type">Board Type</string>
    <string name="reminder">Reminder</string>
    <string name="help">Help</string>
    <string name="player_name_here">Player Name Here</string>
    <string name="player_x_name">Player \'X\' Name</string>
    <string name="player_o_name">Player \'O\' Name</string>
    <string name="x_radio_button">X</string>
    <string name="o_radio_button">O</string>
    <string name="xo_radio_button">XO</string>
    <string name="daily_reminder">Daily</string>
    <string name="twice_daily_reminder">Twice Daily</string>
    <string name="thrice_daily_reminder">Thrice Daily</string>
    <string name="_3_x_3_">3 X 3</string>
    <string name="_5_x_5">5 X 5</string>
    <string name="_7_x_7">7 X 7</string>

    <string name="title_activity_three_by_three">ThreeByThreeActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="player_x">Player X</string>
    <string name="player_o">Player O</string>
    <string name="_0">0</string>
    <string name="reset">RESET</string>
    <string name="x_first_move">X</string>
    <string name="o_first_move">O</string>
    <string name="xo_first_move">XO</string>
    <string name="x_select_player">X</string>
    <string name="o_select_player">O</string>
    <string name="select_piece_text">sSelect Piece</string>
    <string name="player_name_here_edit">Player Name Here</string>
    <string name="play_game_button">play</string>
    <string name="first_move_text">First Move</string>
    <string name="player_x_5x5">Player X</string>
    <string name="_0_5x5">0</string>
    <string name="player_o_5x5">Player O</string>
    <string name="reset_5x5">Reset</string>

</resources>
