<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context=".ThreeByThreeActivity">

    <LinearLayout
        android:id="@+id/boxes_00_02"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_alignParentStart="true"
        android:background="#ffff"
        android:orientation="horizontal">

        <Button
            android:id="@+id/box_0_0"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@color/colorAccent" />

        <Button
            android:id="@+id/box_0_1"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@color/colorAccent" />

        <Button
            android:id="@+id/box_0_2"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@color/colorAccent" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/boxes_10_12"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/boxes_00_02"
        android:background="#ffff"
        android:orientation="horizontal">

        <Button
            android:id="@+id/box_1_0"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@color/colorAccent" />

        <Button
            android:id="@+id/box_1_1"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@color/colorAccent" />

        <Button
            android:id="@+id/box_1_2"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@color/colorAccent" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_below="@+id/boxes_10_12"
        android:background="#ffff"
        android:orientation="horizontal">

        <Button
            android:id="@+id/box_2_0"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@color/colorAccent" />

        <Button
            android:id="@+id/box_2_1"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@color/colorAccent" />

        <Button
            android:id="@+id/box_2_2"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@color/colorAccent" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="203dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/player_x_score"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:background="@drawable/button_shape"
            android:text="@string/player_x"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="40sp" />

        <TextView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:background="@drawable/button_shape"
            android:text="@string/_0"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="40sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="120dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/player_o_score"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:background="@drawable/button_shape"
            android:text="@string/player_o"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="40sp" />

        <TextView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:background="@drawable/button_shape"
            android:text="@string/_0"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="40sp" />


    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_shape"
        android:text="@string/reset"
        android:textSize="30sp"
        android:textColor="@color/colorAccent" />


</RelativeLayout>